// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<FormField /> > should match the snapshot 1`] = `
<div
  class="block text-sm text-neutral-300"
  data-testid="formfield-projectName"
>
  <label
    class="flex items-center gap-1"
    for="projectName"
  >
    Project Name
    <span
      class="text-red-400"
    >
      *
    </span>
    <span
      aria-label="Show project name help"
      data-place=""
      data-testid="tooltip"
    >
      Enter a project name.
    </span>
  </label>
  <div
    class="relative"
  >
    <input
      aria-invalid="false"
      class="mt-1 h-9 w-full rounded border border-app-border bg-dark text-sm text-white focus:border-neutral-500 outline-none px-3"
      data-testid="input-projectName"
      id="projectName"
      name="projectName"
      placeholder="Enter"
      type="text"
      value=""
    />
  </div>
</div>
`;

exports[`<FormField /> > should match the snapshot with error 1`] = `
<div
  class="block text-sm text-neutral-300"
  data-testid="formfield-projectName"
>
  <label
    class="flex items-center gap-1"
    for="projectName"
  >
    Project Name
    <span
      class="text-red-400"
    >
      *
    </span>
    <span
      aria-label="Show project name help"
      data-place=""
      data-testid="tooltip"
    >
      Enter a project name.
    </span>
  </label>
  <div
    class="relative"
  >
    <input
      aria-describedby="_r_o_"
      aria-invalid="true"
      class="mt-1 h-9 w-full rounded border border-app-border bg-dark text-sm text-white focus:border-red-500 outline outline-1 -outline-offset-1 outline-red-500 px-3"
      data-testid="input-projectName"
      id="projectName"
      name="projectName"
      placeholder="Enter"
      type="text"
      value=""
    />
  </div>
  <p
    class="form-error-text mt-1"
    data-testid="error-projectName"
    id="_r_o_"
    role="alert"
  >
    Required
  </p>
</div>
`;
